# income_based_prediction

./: LICENSE  README.md  live_post_request.py  main.py  model_card_template.md  pyproject.toml  render.yaml  requirements.txt  sanitycheck.py  setup.cfg  slice_output.txt  train_model.py
.github/: test.yaml  test.yml
.github/workflows/: test.yml
data_cleaning/: data_cleaning.py
ml/: artifacts.py  data.py  model.py
model/: encoder.pkl  lb.pkl
tests/: test_main.py  test_model.py
utils/: __init__.py  logs.py
